@@ -201,6 +201,7 @@ Per Cederqvist
 Matej Cepl
 Carl Cerecke
 Octavian Cerna
+Dave Chambers
 Pascal Chambon
 John Chandler
 Hye-Shik Chang
